Fixed layout bugs after merge

--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -1,5 +1,5 @@
 .gig-list-container {
-padding:0px 32px;
+
     .sort-container {
         // align-items: left;
         color: #62646a;
